fix(social icons): add dark mode color

--- a/assets/css/sass/base/_objects.scss
+++ b/assets/css/sass/base/_objects.scss
@@ -452,3 +452,9 @@ a.more-link {
     }
   }
 }
+
+.svg-icon {
+  .t-dark-mode & {
+    filter: brightness(1.5);
+  }
+}
